[gd_scene load_steps=13 format=2]

[ext_resource path="res://Images/scroll-background.png" type="Texture" id=1]
[ext_resource path="res://Images/Icon_Items/Feet_Outline.png" type="Texture" id=2]
[ext_resource path="res://Images/Icon_Items/Head_Outline.png" type="Texture" id=3]
[ext_resource path="res://Images/Icon_Items/Pants_Outline.png" type="Texture" id=4]
[ext_resource path="res://Images/Icon_Items/Accessory_Outline.png" type="Texture" id=5]
[ext_resource path="res://Images/Icon_Items/Chest_Outline.png" type="Texture" id=6]
[ext_resource path="res://Images/Icon_Items/Hand_Outline.png" type="Texture" id=7]
[ext_resource path="res://Images/Icon_Items/MainHand_Outline.png" type="Texture" id=8]
[ext_resource path="res://Images/Icon_Items/OffHand_Outline.png" type="Texture" id=9]
[ext_resource path="res://Game/UI/CharacterSheet.gd" type="Script" id=10]
[ext_resource path="res://Game/UI/EqupmentSlot.gd" type="Script" id=11]

[sub_resource type="ExternalTexture" id=1]

[node name="CharacterSheet" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 100.0
margin_top = 200.0
margin_right = -1240.0
margin_bottom = -190.0
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="NinePatchRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 1 )
patch_margin_top = 230
patch_margin_bottom = 230
__meta__ = {
"_edit_use_anchors_": false
}

[node name="M" type="MarginContainer" parent="Background"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 12
custom_constants/margin_top = 12
custom_constants/margin_left = 12
custom_constants/margin_bottom = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Main" type="HBoxContainer" parent="Background/M"]
margin_left = 12.0
margin_top = 12.0
margin_right = 568.0
margin_bottom = 678.0
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftEquip" type="VBoxContainer" parent="Background/M/Main"]
margin_right = 117.0
margin_bottom = 666.0
rect_min_size = Vector2( 117, 0 )
custom_constants/separation = 20

[node name="MarginContainer" type="MarginContainer" parent="Background/M/Main/LeftEquip"]
margin_right = 117.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )

[node name="Head" type="TextureRect" parent="Background/M/Main/LeftEquip"]
margin_left = 8.0
margin_top = 45.0
margin_right = 108.0
margin_bottom = 145.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="Background/M/Main/LeftEquip/Head"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 3 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hand" type="TextureRect" parent="Background/M/Main/LeftEquip"]
margin_left = 8.0
margin_top = 165.0
margin_right = 108.0
margin_bottom = 265.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="Background/M/Main/LeftEquip/Hand"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 7 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Chest" type="TextureRect" parent="Background/M/Main/LeftEquip"]
margin_left = 8.0
margin_top = 285.0
margin_right = 108.0
margin_bottom = 385.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="Background/M/Main/LeftEquip/Chest"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 6 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Legs" type="TextureRect" parent="Background/M/Main/LeftEquip"]
margin_left = 8.0
margin_top = 405.0
margin_right = 108.0
margin_bottom = 505.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="Background/M/Main/LeftEquip/Legs"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 4 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Feet" type="TextureRect" parent="Background/M/Main/LeftEquip"]
margin_left = 8.0
margin_top = 525.0
margin_right = 108.0
margin_bottom = 625.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="Background/M/Main/LeftEquip/Feet"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 2 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Middle" type="Control" parent="Background/M/Main"]
margin_left = 117.0
margin_right = 556.0
margin_bottom = 666.0
size_flags_horizontal = 3

[node name="NameBackground" type="TextureRect" parent="Background/M/Main/Middle"]
anchor_right = 1.0
rect_min_size = Vector2( 0, 80 )
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Background/M/Main/Middle/NameBackground"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Name" type="Label" parent="Background/M/Main/Middle/NameBackground/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_right = 439.0
margin_bottom = 45.0
rect_min_size = Vector2( 0, 45 )
text = "Hamza"
align = 1
valign = 2

[node name="LevelClass" type="Label" parent="Background/M/Main/Middle/NameBackground/VBoxContainer"]
modulate = Color( 0, 0, 0, 1 )
margin_top = 49.0
margin_right = 439.0
margin_bottom = 80.0
size_flags_vertical = 3
text = "Level 32 Warrior"
align = 1

[node name="V" type="VBoxContainer" parent="Background/M/Main/Middle"]
margin_top = 92.7581
margin_right = 40.0
margin_bottom = 132.758
__meta__ = {
"_edit_use_anchors_": false
}

[node name="healthLabel" type="Label" parent="Background/M/Main/Middle/V"]
margin_right = 152.0
margin_bottom = 14.0
text = "0/0 HP"

[node name="armorLabel" type="Label" parent="Background/M/Main/Middle/V"]
margin_top = 18.0
margin_right = 152.0
margin_bottom = 32.0
text = "0/0 Armor"

[node name="damageLabel" type="Label" parent="Background/M/Main/Middle/V"]
margin_top = 36.0
margin_right = 152.0
margin_bottom = 50.0
text = "0 MAIN HAND DAMAGE"

[node name="offDamageLabel" type="Label" parent="Background/M/Main/Middle/V"]
margin_top = 54.0
margin_right = 152.0
margin_bottom = 68.0
text = "0 OFF HAND DAMAGE"

[node name="speedLabel" type="Label" parent="Background/M/Main/Middle/V"]
margin_top = 72.0
margin_right = 152.0
margin_bottom = 86.0
text = "0 SPEED"

[node name="expLabel" type="Label" parent="Background/M/Main/Middle/V"]
margin_top = 90.0
margin_right = 152.0
margin_bottom = 104.0
text = "0 EXP"

[node name="MiddleEquip" type="HBoxContainer" parent="Background/M/Main/Middle"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_vertical = 0
rect_min_size = Vector2( 0, 120 )
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MainHand" type="TextureRect" parent="Background/M/Main/Middle/MiddleEquip"]
margin_left = 39.0
margin_right = 139.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="Background/M/Main/Middle/MiddleEquip/MainHand"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 8 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OffHand" type="TextureRect" parent="Background/M/Main/Middle/MiddleEquip"]
margin_left = 169.0
margin_right = 269.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="Background/M/Main/Middle/MiddleEquip/OffHand"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 9 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Accessory" type="TextureRect" parent="Background/M/Main/Middle/MiddleEquip"]
margin_left = 299.0
margin_right = 399.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 4
size_flags_vertical = 0
texture = ExtResource( 1 )
expand = true

[node name="Icon" type="TextureRect" parent="Background/M/Main/Middle/MiddleEquip/Accessory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 4.0
margin_top = 4.0
margin_right = -4.0
margin_bottom = -4.0
texture = ExtResource( 5 )
expand = true
script = ExtResource( 11 )
__meta__ = {
"_edit_use_anchors_": false
}
